--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -55,6 +55,7 @@
     margin-inline: -2.5rem 
 .tam
   width: 131px
+  margin-left: 40px
 .aqw
   background-color: white
   border-radius: 15px
@@ -128,6 +129,7 @@
     margin-inline: -2.5rem 
 .cr
   background-color: #FAEBCD
+  margin-left: -24px
 .cg
   background-color: #DDD8F0
 .bg6
@@ -240,3 +242,62 @@
   margin-left: -12px
   border-top-right-radius: 10px
   border-bottom-right-radius: 10px
+.colorn
+  background-color:  black
+.colorr1
+  background-color: #B34F51
+.colorr
+  background-color: #FF0000
+.colorg
+  background-color: #6D6E71
+.colorg1
+  background-color: #CBCBCB
+.tabla-b th
+  width: 350px
+.pqa
+  padding: 8px
+.tarjeta-avatar > img
+  left: 60%
+.tarjeta.color-primario.a1
+  background-color: #FED5B1
+.tarjeta.color-acento-botones.a2
+  background-color: #E1F3D7
+.tarjeta.color-acento-contenido.a3
+  background-color: #FEEFBF
+.tarjeta.color-acento-contenido.a4
+  background-color: #F6FBD1
+.tarjeta.color-acento-contenido *
+  color: #12263F
+.tarjeta.color-acento-botones *
+  color: #12263F
+.bgf
+  background-image: url("../assets/curso/tema3/bgf.png") !important
+  background-size: cover
+  margin-inline: -3.4rem
+  padding: 50px
+  padding-top: 0px
+  background-repeat: no-repeat
+  @media screen and ( max-width: 992px)
+    background-size: cover
+    margin-inline: -2.5rem
+.cv
+  color: #583CB6
+.tamq1
+  @media screen and ( max-width: 992px)
+    width: 40%
+    margin-left: auto
+    margin-right: auto
+.aaw
+  @media screen and ( max-width: 992px)
+    margin-left: auto
+    margin-right: 
+.aaqws
+  @media screen and ( max-width: 430px)
+    margin-bottom: 240px
+.tarjeta-avatar .tarjeta
+  @media screen and ( max-width: 430px)
+    width: 300px!important
+    padding-top: 10px!important
+.tarjeta-avatar > img
+  @media screen and ( max-width: 430px)
+    left: 60%!important
