--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -58,7 +58,7 @@
   margin-left: 40px
 .aqw
   background-color: white
-  border-radius: 15px
+  border-radius: 20px
 .mtn
   margin-top: -130px
 .bt2
@@ -141,6 +141,7 @@
   @media screen and ( max-width: 992px)
     background-size: cover
     margin-inline: -2.5rem 
+    background-position: center
 .bg7
   background-image: url("../assets/curso/tema2/bg4.png") !important
   background-size: cover
@@ -253,7 +254,7 @@
 .colorg1
   background-color: #CBCBCB
 .tabla-b th
-  width: 350px
+  width: 370px
 .pqa
   padding: 8px
 .tarjeta-avatar > img
@@ -282,15 +283,20 @@
     margin-inline: -2.5rem
 .cv
   color: #583CB6
+  margin-right: 10px
 .tamq1
   @media screen and ( max-width: 992px)
-    width: 40%
+    width: 50%
     margin-left: auto
     margin-right: auto
 .aaw
   @media screen and ( max-width: 992px)
     margin-left: auto
-    margin-right: 
+    margin-right: auto
+.ffa
+  @media screen and ( max-width: 992px)
+    width: 0px
+
 .aaqws
   @media screen and ( max-width: 430px)
     margin-bottom: 240px
@@ -301,3 +307,11 @@
 .tarjeta-avatar > img
   @media screen and ( max-width: 430px)
     left: 60%!important
+.mbn
+  margin-bottom: -40px
+.tarjeta.color-secundario
+  background-color: #F0BD51
+.colaqw
+  background-image: url("../assets/curso/tema6/b1.png") !important
+.ama
+  background-color: #F0BD51
