--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -224,8 +224,12 @@
   margin-left: -12px
   border-top-right-radius: 10px
   border-bottom-right-radius: 10px
+  @media screen and ( max-width: 992px)
+    margin-left: -60px
+  @media screen and ( max-width: 430px)
+    margin-left: -12px
 .la
-  background-color: #CDC5E9
+  background-color: #CDC5E9!important
 .bazx
   background-color: #E2D9FF
   margin-left: 7px
@@ -243,6 +247,9 @@
   margin-left: -12px
   border-top-right-radius: 10px
   border-bottom-right-radius: 10px
+  @media screen and ( max-width: 992px)
+    margin-left: -12px
+    padding: 1.5rem!important
 .colorn
   background-color:  black
 .colorr1
@@ -289,6 +296,10 @@
     width: 50%
     margin-left: auto
     margin-right: auto
+  @media screen and ( max-width: 430px)
+    width: 100%
+    margin-left: auto
+    margin-right: auto
 .aaw
   @media screen and ( max-width: 992px)
     margin-left: auto
@@ -313,5 +324,8 @@
   background-color: #F0BD51
 .colaqw
   background-image: url("../assets/curso/tema6/b1.png") !important
+  background-repeat: no-repeat
 .ama
   background-color: #F0BD51
+.wim 
+  width: 385px!important
