--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -248,8 +248,29 @@
   border-top-right-radius: 10px
   border-bottom-right-radius: 10px
   @media screen and ( max-width: 992px)
+    margin-left: -73px
+    padding: 1.5rem!important
+  @media screen and ( max-width: 430px)
     margin-left: -12px
     padding: 1.5rem!important
+.awaz1
+  @media screen and ( max-width: 992px)
+    padding: 26px!important
+  @media screen and ( max-width: 430px)
+    padding: 24px!important
+.awaz2
+  @media screen and ( max-width: 992px)
+    padding: 25px!important
+  @media screen and ( max-width: 430px)
+    padding: 36px!important
+.awaz3
+  @media screen and ( max-width: 992px)
+    padding: 18px!important
+  @media screen and ( max-width: 430px)
+    padding: 10px!important
+.awaz4
+  @media screen and ( max-width: 992px)
+    padding: 14px!important
 .colorn
   background-color:  black
 .colorr1
@@ -329,3 +350,21 @@
   background-color: #F0BD51
 .wim 
   width: 385px!important
+.paqw1
+  @media screen and ( max-width: 769px)
+    padding: 20px!important
+  @media screen and ( max-width: 430px)
+    padding: 13px!important
+
+.paqw2
+  padding: 15px!important
+  @media screen and ( max-width: 769px)
+    padding: 8px!important
+  @media screen and ( max-width: 430px)
+    padding: 13px!important
+.paqw3
+  padding: 22px!important
+  @media screen and ( max-width: 769px)
+    padding: 16px!important
+  @media screen and ( max-width: 430px)
+    padding: 20px!important
