--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -129,7 +129,9 @@
     margin-inline: -2.5rem 
 .cr
   background-color: #FAEBCD
-  margin-left: -24px
+  margin-left: -70px
+  @media screen and ( max-width: 992px)
+    margin-left: 0px
 .cg
   background-color: #DDD8F0
 .bg6
@@ -368,3 +370,5 @@
     padding: 16px!important
   @media screen and ( max-width: 430px)
     padding: 20px!important
+.wima
+  width: 80px
